feat: added city location search and city weather search, weather display

--- a/weatherApp/src/components/Main/MainStyles/DateDisplay.module.scss
+++ b/weatherApp/src/components/Main/MainStyles/DateDisplay.module.scss
@@ -2,7 +2,7 @@
   background-color: rgba(255, 255, 255, 0.298);
   display: flex;
   justify-content: center;
-  padding: 15px;
+  padding: 15px 100px;
   border-radius: 10px;
   margin: auto;
   font-weight: bold;
