--- a/weatherApp/src/components/Header/HeaderStyles/SearchBar.module.scss
+++ b/weatherApp/src/components/Header/HeaderStyles/SearchBar.module.scss
@@ -12,6 +12,12 @@
   }
   input:focus {
     outline: none;
+    width: 100%;
+    padding: 10px 20px 10px 15px;
+    font-size: 16px;
+    border-radius: 20px;
+    border: 1px solid white;
+    background-color: #ffffff42;
   }
   button {
     cursor: pointer;
